--- a/styles/index.css
+++ b/styles/index.css
@@ -5,36 +5,6 @@ body{
     font-family:"Mulish",sans-serif
 }
 
-/* p{
-    opacity:0.6;
-    line-height:26px
-}
-
-h1{
-    font-size:40px;
-    font-style:normal;
-    font-weight:700;
-    line-height:60px
-}
-
-h2{
-    color:#111;
-    font-family:"Mulish",sans-serif;
-    font-size:28px;
-    font-style:normal;
-    font-weight:700;
-    line-height:38px
-}
-h3{
-    color:#4A4FF2;
-    font-family:"Mulish",sans-serif;
-    font-size:22px;
-    font-style:normal;
-    font-weight:700;
-    line-height:normal;
-    letter-spacing:-0.423px
-} */
-
 /* navbar */
 
 .navbar{
@@ -350,3 +320,15 @@ hr{
    margin-top:20px;
 }
 
+/* footer */
+
+.footer{
+    display: flex;
+    width: 1109px;
+    height: 23px;
+    background: #FFF;
+    align-items: center;
+    padding-top: 90px;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
