--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ body{
     align-items: center;
     padding-top: 60px;
     justify-content: space-between;
+    margin-bottom: 100px;
 }
 
 .logo{
