--- a/styles/home.css
+++ b/styles/home.css
@@ -1,58 +1,3 @@
-body {
-  max-width: 1110px;
-  width: 100%;
-  margin: auto;
-  font-family: "Mulish", sans-serif;
-}
-
-/* navbar */
-.navbar {
-  width: 1109px;
-  height: 23px;
-  display: flex;
-  background: #FFF;
-  align-items: center;
-  padding-top: 60px;
-  justify-content: space-between;
-  margin-bottom: 100px;
-}
-
-.logo {
-  align-items: center;
-  display: flex;
-}
-
-.logo img {
-  width: 90px;
-  height: 20px;
-  margin-right: auto;
-  background: rgb(255, 255, 255) 0px 0px/100% 100% no-repeat;
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-}
-
-.nav-links li {
-  margin-right: 30px;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #111;
-  font-family: "Mulish", sans-serif;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: -0.346px;
-}
-
-.nav-links a:hover {
-  color: #4A4FF2;
-}
-
 /* SECTION 1 */
 .container-1 {
   display: flex;
@@ -326,14 +271,4 @@ hr {
   margin-top: 20px;
 }
 
-/* footer */
-.footer {
-  display: flex;
-  width: 1109px;
-  height: 23px;
-  background: #FFF;
-  align-items: center;
-  padding-top: 90px;
-  justify-content: space-between;
-  margin-bottom: 50px;
-}/*# sourceMappingURL=home.css.map */
+/* footer *//*# sourceMappingURL=home.css.map */
